<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_category"
        android:textStyle="bold"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/name_of_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColorHint="#546E7A"
        android:hint="@string/name_of_category"
        android:inputType="text"/>

    <EditText
        android:id="@+id/description_of_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:textColorHint="#546E7A"
        android:hint="@string/description_of_category"
        android:inputType="textMultiLine" />
</LinearLayout>
